# ccl

./: README.md
ImageTrans/: CMakeLists.txt  ImageDeal.cpp  define.h  imageDeal.h  main.cpp  test.cpp  util.cpp  util.h
testWidget/: README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  mylabel.cpp  mylabel.h  testWidget.pro
